--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-horizontal.html
@@ -2,7 +2,7 @@
 <!--{% include 'mainApp/navbar.html' with is_active=True message='Hello from parent template!' %}-->
 
 {% load static %}
-{% block navbar_content %}
+{% block content %}
 
     <div class="container custom-style-container">
         <h1>Horizontal Tutorial</h1>
