--- a/django_docker_project/templates/flexbox_tutorial/show-flexbox-code.html
+++ b/django_docker_project/templates/flexbox_tutorial/show-flexbox-code.html
@@ -1,7 +1,7 @@
 {% extends 'flexbox_tutorial/navbar.html'%}
 {% load static %}
 
-{% block navbar_content %}
+{% block content %}
     <div class="container custom-style-container">
         <div class="d-flex justify-content-between">
             <div id="html_code">
