--- a/django_docker_project/templates/learn_celery_tutorial/configuration_steps.html
+++ b/django_docker_project/templates/learn_celery_tutorial/configuration_steps.html
@@ -2,7 +2,7 @@
 <!--{% include 'mainApp/navbar.html' with is_active=True message='Hello from parent template!' %}-->
 
 {% load static %}
-{% block navbar_content %}
+{% block content %}
 
     <link href="{% static 'css/learn_celery_tutorial/learn_celery_tutorial_main.css' %}" rel="stylesheet">
 
