--- a/django_docker_project/templates/learn_celery_tutorial/number_counter_celery_beat.html
+++ b/django_docker_project/templates/learn_celery_tutorial/number_counter_celery_beat.html
@@ -1,7 +1,7 @@
 {% extends 'learn_celery_tutorial/navbar.html'%}
 <!--{% include 'mainApp/navbar.html' with is_active=True message='Hello from parent template!' %}-->
 {% load static %}
-{% block navbar_content %}
+{% block content %}
 
     <!-- JS file to Update the Result Field by Call AJAX Jquery   -->
     <script src="{% static 'js/learn_celery_tutorial/number_counter_update_view.js' %}"></script>
