--- a/django_docker_project/templates/learn_celery_tutorial/result.html
+++ b/django_docker_project/templates/learn_celery_tutorial/result.html
@@ -1,7 +1,7 @@
 {% extends 'learn_celery_tutorial/navbar.html'%}
 <!--{% include 'mainApp/navbar.html' with is_active=True message='Hello from parent template!' %}-->
 {% load static %}
-{% block navbar_content %}
+{% block content %}
     <script>
         var result = '{{result}}';
     </script>
