--- a/django_docker_project/templates/flexbox_tutorial/learn-flexbox-vertical.html
+++ b/django_docker_project/templates/flexbox_tutorial/learn-flexbox-vertical.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block navbar_content %}
+{% block content %}
         
     <div class="container custom-style-container">
         <h1>Vertical Tutorial</h1>
