--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -1,86 +1,22 @@
-<!DOCTYPE html>
-
+{% extends 'base.html'%}
 {% load static %}
-{% static "img" as baseImageUrl %}
 
-<html lang="en">
+<!--NAVBAR Headers will be Defined Here-->
+{% block navbar_content %}
+    <ul>
+        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+        <li><a class="nav-link scrollto" href="create/player">Create Player</a></li>
+        <li><a class="nav-link scrollto" href="#about-players">About Players</a></li>
+        <li><a class="nav-link scrollto" href="create/footballclub">Create Football Club</a></li>
+        <li><a class="nav-link scrollto " href="/flexbox-tutorial/horizontal">Learn FlexBox</a></li>
+        <li><a class="nav-link scrollto " href="/learn-celery-tutorial/theory">Learn Celery</a></li>
+    </ul>
+<i class="bi bi-list mobile-nav-toggle"></i>
+{% endblock %}
 
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>E-Learniverse Django</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
 
-    <!-- Favicons -->
-    <link href="{% static 'img/favicon.png' %}" rel="icon">
-    <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-          rel="stylesheet">
-
-    <!-- Vendor CSS Files -->
-    <link href="{% static 'vendor/animate.css/animate.min.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
-
-    <!-- Template Main CSS File -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-
-    <!-- =======================================================
-    * Template Name: Green - v4.7.0
-    * Template URL: https://bootstrapmade.com/green-free-one-page-bootstrap-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
-</head>
-
-<body>
-
-<!-- ======= Top Bar ======= -->
-<section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
-        <div class="contact-info d-flex align-items-center">
-            <i class="bi bi-envelope-fill"></i><a href="mailto:anantaakash.podder@gmail.com">anantaakash.podder@gmail.com</a>
-            <i class="bi bi-phone-fill phone-icon"></i> +88017****208
-        </div>
-        <div class="social-links d-none d-md-block">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        </div>
-    </div>
-</section>
-
-<!-- ======= Header ======= -->
-<header id="header" class="d-flex align-items-center">
-    <div class="container d-flex align-items-center">
-
-        <h1 class="logo me-auto"><a href="/">E-Learniverse</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
-        <nav id="navbar" class="navbar">
-            <ul>
-                <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                <li><a class="nav-link scrollto" href="create/player">Create Player</a></li>
-                <li><a class="nav-link scrollto" href="#about-players">About Players</a></li>
-                <li><a class="nav-link scrollto" href="create/footballclub">Create Football Club</a></li>
-                <li><a class="nav-link scrollto " href="/flexbox-tutorial/horizontal">Learn FlexBox</a></li>
-                <li><a class="nav-link scrollto " href="/learn-celery-tutorial/theory">Learn Celery</a></li>
-            </ul>
-            <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
-
-    </div>
-</header><!-- End Header -->
-
+{% block content %}
 <!-- ======= Hero Section ======= -->
 <section id="hero">
     <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -290,16 +226,4 @@
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
 
-<!-- Vendor JS Files -->
-<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'vendor/glightbox/js/glightbox.min.js' %}"></script>
-<script src="{% static 'vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-<script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
-<!--<script src="{% static 'vendor/php-email-form/validate.js' %}"></script>-->
-
-<!-- Template Main JS File -->
-<script src="{% static 'js/main.js' %}"></script>
-
-</body>
-
-</html>
+{% endblock %}
