--- a/django_docker_project/templates/learn_celery_tutorial/navbar.html
+++ b/django_docker_project/templates/learn_celery_tutorial/navbar.html
@@ -8,6 +8,7 @@
         <li><a class="nav-link" href="/learn-celery-tutorial/configuration-steps">Configuration Steps</a></li>
         <li><a class="nav-link scrollto" href="/learn-celery-tutorial/add-number">Add Number(Celery)</a></li>
         <li><a class="nav-link scrollto" href="/learn-celery-tutorial/number-counter-periodic-scheduled-task">Number Counter(Celery Beat)</a></li>
+        <li><a class="nav-link scrollto" href="/learn-celery-tutorial/one-time-task">One Time Task(Celery Beat)</a></li>
     </ul>
     <i class="bi bi-list mobile-nav-toggle"></i>
 {% endblock %}
