--- a/django_docker_project/templates/learn_celery_tutorial/number_counter_celery_beat.html
+++ b/django_docker_project/templates/learn_celery_tutorial/number_counter_celery_beat.html
@@ -2,9 +2,16 @@
 <!--{% include 'mainApp/navbar.html' with is_active=True message='Hello from parent template!' %}-->
 {% load static %}
 {% block content %}
+    <script>
+        var result = '{{result}}';
+    </script>
 
-    <!-- JS file to Update the Result Field by Call AJAX Jquery   -->
-    <script src="{% static 'js/learn_celery_tutorial/number_counter_update_view.js' %}"></script>
+    <!-- JS file to Update the Result Field by Calling AJAX Jquery   -->
+    {% if one_time_task_context %}
+        <script src="{% static 'js/learn_celery_tutorial/update_result_to_html.js' %}"></script>
+    {% else %}
+        <script src="{% static 'js/learn_celery_tutorial/number_counter_update_view.js' %}"></script>
+    {% endif %}
 
     <div class="container custom-style-container">
         <h1>Number Counter</h1>
