- `User Push Scheduled Task in Celery Queue` mechanism Added

--- a/django_docker_project/templates/learn_celery_tutorial/navbar.html
+++ b/django_docker_project/templates/learn_celery_tutorial/navbar.html
@@ -9,6 +9,7 @@
         <li><a class="nav-link scrollto" href="/learn-celery-tutorial/add-number">Add Number(Celery)</a></li>
         <li><a class="nav-link scrollto" href="/learn-celery-tutorial/number-counter-periodic-scheduled-task">Number Counter(Celery Beat)</a></li>
         <li><a class="nav-link scrollto" href="/learn-celery-tutorial/one-time-task">One Time Task(Celery Beat)</a></li>
+        <li><a class="nav-link scrollto" href="/learn-celery-tutorial/user_push_scheduled_celery_task">User Starts Scheduled Celery Task</a></li>
     </ul>
     <i class="bi bi-list mobile-nav-toggle"></i>
 {% endblock %}
