--- a/django_docker_project/templates/learn_celery_tutorial/navbar.html
+++ b/django_docker_project/templates/learn_celery_tutorial/navbar.html
@@ -7,9 +7,14 @@
         <li><a class="nav-link" href="/learn-celery-tutorial/theory">Learn Theory</a></li>
         <li><a class="nav-link" href="/learn-celery-tutorial/configuration-steps">Configuration Steps</a></li>
         <li><a class="nav-link scrollto" href="/learn-celery-tutorial/add-number">Add Number(Celery)</a></li>
-        <li><a class="nav-link scrollto" href="/learn-celery-tutorial/number-counter-periodic-scheduled-task">Number Counter(Celery Beat)</a></li>
-        <li><a class="nav-link scrollto" href="/learn-celery-tutorial/one-time-task">One Time Task(Celery Beat)</a></li>
-        <li><a class="nav-link scrollto" href="/learn-celery-tutorial/user_push_scheduled_celery_task">User Starts Scheduled Celery Task</a></li>
+        <!--DropDown-->
+        <li class="dropdown"><a href="#"><span>Celery Beat Tasks</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+                <li><a class="nav-link scrollto" href="/learn-celery-tutorial/number-counter-periodic-scheduled-task">Number Counter</a></li>
+                <li><a class="nav-link scrollto" href="/learn-celery-tutorial/one-time-task">One Time Task</a></li>
+                <li><a class="nav-link scrollto" href="/learn-celery-tutorial/user_push_scheduled_celery_task">User Starts Scheduled Celery Task</a></li>
+            </ul>
+        </li>
     </ul>
     <i class="bi bi-list mobile-nav-toggle"></i>
 {% endblock %}
