--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -11,6 +11,7 @@
         <li><a class="nav-link scrollto " href="/flexbox-tutorial/horizontal">Learn FlexBox</a></li>
         <li><a class="nav-link scrollto " href="/learn-celery-tutorial/theory">Learn Celery</a></li>
         <li><a class="nav-link scrollto " href="/register/signup">Sign Up</a></li>
+        <li><a class="nav-link scrollto " href="/register/login">Log In</a></li>
     </ul>
 <i class="bi bi-list mobile-nav-toggle"></i>
 {% endblock %}
