--- a/django_docker_project/templates/register_app/user_profile.html
+++ b/django_docker_project/templates/register_app/user_profile.html
@@ -5,21 +5,8 @@
     <div class="container custom-style-container">
         <h1>Profile Page</h1>
         <h4>Welcome {{username}}</h4>
-        <a href="{% url 'user_logout' %}" style="color: black;">Log Out</a>
-<!--        {% if form %}-->
-<!--            &lt;!&ndash;   `novalidate` diye amra CUSTOM ERROR Message dekhate parbo     &ndash;&gt;-->
-<!--            <form action="/register/login" method="POST" novalidate>-->
-<!--                {% csrf_token %}-->
-<!--                {% for fm_item in form %}-->
-<!--                    {{ fm_item.label_tag }} {{fm_item}} {{fm_item.errors|striptags}} <br><br>-->
-<!--                {% endfor %}-->
-<!--                <input type="submit" value="Log In">-->
-<!--            </form>-->
-<!--        {% endif %}-->
-
-<!--        {% if msg %}-->
-<!--            <h4>{{msg}}</h4>-->
-<!--        {% endif %}-->
+        <a href="{% url 'user_changepass' %}" class="nav-link scrollto">Change Password</a>
+        <a href="{% url 'user_logout' %}" class="nav-link scrollto">Log Out</a>
     </div>
 
 {% endblock %}
