--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -16,6 +16,7 @@
             <!-- User is authenticated, show authenticated content -->
             <li class="dropdown"><a href="#"><span></span>Welcome {{ user.username }}!<i class="bi bi-chevron-down"></i></a>
                 <ul>
+                    <li><a class="nav-link scrollto" href="{% url 'user_changepass' %}">Change Password</a></li>
                     <li><a class="nav-link scrollto" href="{% url 'user_logout' %}">Log Out</a></li>
                 </ul>
             </li>
