--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -17,6 +17,7 @@
             <li class="dropdown"><a href="#"><span></span>Welcome {{ user.username }}!<i class="bi bi-chevron-down"></i></a>
                 <ul>
                     <li><a class="nav-link scrollto" href="{% url 'user_changepass' %}">Change Password</a></li>
+                    <li><a class="nav-link scrollto" href="{% url 'user_changepass_without_oldpass' %}">Forget Password</a></li>
                     <li><a class="nav-link scrollto" href="{% url 'user_logout' %}">Log Out</a></li>
                 </ul>
             </li>
