- Implemented Sending Notification to Andorid Devices with FCM Token & Firebase-Admin SDK of Python

--- a/django_docker_project/templates/notification_app/send_notification.html
+++ b/django_docker_project/templates/notification_app/send_notification.html
@@ -4,6 +4,7 @@
 
     <div class="container custom-style-container">
         <h1>Send Notification</h1>
+        <h4>{{msg}}</h4>
         <!--enctype="multipart/form-data" nah dile FILE input hisave ney nah-->
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
