- added `backend_port`, `client_port` & `os process id` in Home Page of the website

--- a/django_docker_project/templates/base.html
+++ b/django_docker_project/templates/base.html
@@ -84,6 +84,7 @@
         </div>
     </header><!-- End Header -->
 
+    <h1>Hello from Gunicorn worker: {{ backend_port }}, client port: {{ client_port }} and process ID: {{ worker_process_id }}</h1>
 
     {% block content %}
     <!-- .navbar's CHILD will inherit this `content` in there HTML-->
