--- a/django_docker_project/templates/travello/index.html
+++ b/django_docker_project/templates/travello/index.html
@@ -4,7 +4,7 @@
 <!--NAVBAR Headers will be Defined Here-->
 {% block navbar_content %}
     <ul>
-        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+        <li><a class="nav-link scrollto active" href="/">Home</a></li>
         <li><a class="nav-link scrollto" href="create/player">Create Player</a></li>
         <li><a class="nav-link scrollto" href="#about-players">About Players</a></li>
         <li><a class="nav-link scrollto" href="create/footballclub">Create Football Club</a></li>
